test/test_suite2/errors/error_semantic_fails.c3
fault Repeater
{
    A,
    A // #error: This fault value was declared twice.
}
